...

                
                Text("Cuisine: \(recipe.cuisine)")
                    .font(.headline).padding(.bottom, 10)
                
                if let sourceURL = recipe.source_url {
                    Link("Read Full Recipe", destination: sourceURL).font(.headline).foregroundColor(.blue).padding(.bottom, 10)
                }
                
                if let youtubeURL = recipe.youtube_url {
                    Link("Watch YouTube Video", destination: youtubeURL).font(.headline).foregroundColor(.blue).padding(.bottom, 10)
                }
            }//end of VStack
            .padding()
        }//end of ScrollView
        .navigationTitle(recipe.name)
        .navigationBarTitleDisplayMode(.inline)
...
