...
                        }
                    } .refreshable {
                        await viewModel.fetchAllRecipes()
                    }
                } // end of recipes data conditional
            } // end of Group
            .navigationTitle("Fetch-A-Recipe")
            .navigationBarTitleDisplayMode(.inline)
            .toolbar{
                ToolbarItem(placement: .navigationBarTrailing) {
                    Button(action: {
                        Task {
                            await viewModel.fetchAllRecipes()
                        }
                    }) {
                        
                        Image(systemName: "arrow.clockwise")
                    }.accessibilityIdentifier("refreshButton")
                }
            } // end of toolbar
            .task{
                await viewModel.fetchAllRecipes()
            }
        } // end of NavigationView
...
